--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="#aboutme">About me</a>
-            <a href="#">Project</a>
+            <a href="https://genino17.github.io/reservibe/">Project</a>
             <a href="#" class="info-btn">Login</a>
         </nav>
            
