--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <header>
         <img src="images/purpletips.png" class="logo" >
         <nav>
-            <a href="#">Home</a>
+            <a href="https://genino17.github.io/psuuc-grnino.github.io/">Home</a>
             <a href="#aboutme">About me</a>
             <a href="https://genino17.github.io/reservibe/">Project</a>
             <a href="#" class="info-btn">Login</a>
@@ -83,9 +83,9 @@
             <div class="footer-col">
                 <ul class="Links">
                     <h2>Links</h2>
-                    <li><a href="landingpage.html"></a>Home</li>
-                    <li><a href="aboutme.html"></a>About Me</li>
-                    <li><a href="project.html"></a>Project</li>
+                    <li><a href="https://genino17.github.io/psuuc-grnino.github.io/"></a>Home</li>
+                    <li><a href="#aboutme"></a>About Me</li>
+                    <li><a href="https://genino17.github.io/reservibe/">Project"></a>Project</li>
                     <li><a href="#contacts"></a>Contacts</li>
                     
             </div>
