--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
 
             <div class="footer-colm">
                 <h2>Purple<span>Tips</span></h2>
-                <p><i>Embark on unforgettable journeys, from exotic <br> destinations to hidden gems, we'll take you there.</i></p>
+                <div class="quote"> "ARTIST <span> BEYOND <br></span> EXPECTATION <br> BRINGING THE <br> <span>BEST</span>" </div>
             </div>
             
             <div class="footer-col">
                 <ul class="Links">
                     <h2>Links</h2>
-                    <li><a href="https://genino17.github.io/psuuc-grnino.github.io/"></a>Home</li>
-                    <li><a href="#aboutme"></a>About Me</li>
-                    <li><a href="https://genino17.github.io/reservibe/">Project"></a>Project</li>
-                    <li><a href="#contacts"></a>Contacts</li>
+                    <li><a href="https://genino17.github.io/psuuc-grnino.github.io/">Home</a></li>
+                    <li><a href="#aboutme">About Me</a></li>
+                    <li><a href="https://genino17.github.io/reservibe/>Project</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
                     
             </div>
 
