--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             
             <div class="footer-col">
-                <ul class="Links">
+                <ul class="links">
                     <h2>Links</h2>
                     <li><a href="https://genino17.github.io/psuuc-grnino.github.io/">Home</a></li>
                     <li><a href="#aboutme">About Me</a></li>
