--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <header>
         <img src="images/purpletips.png" class="logo" >
         <nav>
-            <a href="https://genino17.github.io/psuuc-grnino.github.io/">Home</a>
+            <a href="https://psuuc-grnino.github.io/">Home</a>
             <a href="#aboutme">About me</a>
             <a href="https://genino17.github.io/reservibe/">Project</a>
             <a href="#" class="info-btn">Login</a>
@@ -83,7 +83,7 @@
             <div class="footer-col">
                 <ul class="links">
                     <h2>Links</h2>
-                    <li><a href="https://genino17.github.io/psuuc-grnino.github.io/">Home</a></li>
+                    <li><a href="https://psuuc-grnino.github.io/">Home</a></li>
                     <li><a href="#aboutme">About Me</a></li>
                     <li><a href="https://genino17.github.io/reservibe/">Project</a></li>
                     <li><a href="#contacts">Contacts</a></li>
