--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="https://psuuc-grnino.github.io/">Home</a>
             <a href="#aboutme">About me</a>
-            <a href="https://genino17.github.io/reservibe/">Project</a>
+            <a href="https://psuuc-grnino.github.io/reservibe/">Project</a>
             <a href="#" class="info-btn">Login</a>
         </nav>
            
@@ -85,7 +85,7 @@
                     <h2>Links</h2>
                     <li><a href="https://psuuc-grnino.github.io/">Home</a></li>
                     <li><a href="#aboutme">About Me</a></li>
-                    <li><a href="https://genino17.github.io/reservibe/">Project</a></li>
+                    <li><a href="https://psuuc-grnino.github.io/reservibe/">Project</a></li>
                     <li><a href="#contacts">Contacts</a></li>
                     
             </div>
