--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="https://psuuc-grnino.github.io/">Home</a>
             <a href="#aboutme">About me</a>
             <a href="https://psuuc-grnino.github.io/reservibe/">Project</a>
-            <a href="#" class="info-btn">Login</a>
+            <a href="#contacts" class="info-btn">Contacts</a>
         </nav>
            
        </header>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="footer-col">
-                <ul class="Contacts">
+                <ul class="contacts">
                     <h2 id="contacts">Contacts</h2>
                     <li><a href="#"></a>jingkyeopta@gmail.com</li>
                     <li><a href="#"></a>+629167432452</li>
