--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="https://psuuc-grnino.github.io/">Home</a>
             <a href="#aboutme">About me</a>
-            <a href="https://psuuc-grnino.github.io/reservibe/">Project</a>
+            <a href="https://psuuc-grnino.github.io/reservibe-landing-page/">Project</a>
             <a href="#contacts" class="info-btn">Contacts</a>
         </nav>
            
