--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h2>Links</h2>
                     <li><a href="https://psuuc-grnino.github.io/">Home</a></li>
                     <li><a href="#aboutme">About Me</a></li>
-                    <li><a href="https://psuuc-grnino.github.io/reservibe/">Project</a></li>
+                    <li><a href="https://psuuc-grnino.github.io/reservibe-landing-page/">Project</a></li>
                     <li><a href="#contacts">Contacts</a></li>
                     
             </div>
